[gd_scene load_steps=3 format=3 uid="uid://144lpa4m8ud0"]

[ext_resource type="Script" uid="uid://dtqe38qrk08ct" path="res://scripts/ui/swing_card_slot.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://c072mhp0dxk11" path="res://textures/Swing Card (1).png" id="2_g4me3"]

[node name="SwingCardSlot" type="Control"]
custom_minimum_size = Vector2(140, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 304.0
offset_bottom = 416.0
script = ExtResource("1_script")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 304.0
offset_bottom = 419.0
texture = ExtResource("2_g4me3")
stretch_mode = 2

[node name="DropZone" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DropZone"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "Swing Card"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardContainer" type="Control" parent="."]
layout_mode = 1
anchor_right = 0.998
anchor_bottom = 1.0
offset_right = -0.052001953
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
